--- a/controller/Vagrantfile
+++ b/controller/Vagrantfile
@@ -29,6 +29,7 @@ Vagrant.configure("2") do |config|
   # using a specific IP.
 
     config.vm.network "private_network", ip: "10.0.0.11"
+    config.vm.network "forwarded_port", guest: 80, host: 80
   # config.vm.network "public_network"
 
 
@@ -42,8 +43,8 @@ Vagrant.configure("2") do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
-  config.vm.synced_folder '.', '/vagrant', disabled: true 
- 
+  config.vm.synced_folder '.', '/vagrant', disabled: true
+
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
@@ -53,7 +54,7 @@ Vagrant.configure("2") do |config|
   #   vb.gui = true
      vb.name = "controller"
   #   # Customize the amount of memory on the VM:
-     vb.memory = "4096"
+     vb.memory = "8192"
    end
   #
   # View the documentation for the provider you are using for more
